//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  memberType MemberType [not null, default: 'PARENT']
  tasksCreated Task [not null]
  tasksAssigned Task [not null]
  family Family
  familyId String
  choresCreated Chore [not null]
  choresAssigned Chore [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Task {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  done Boolean [not null, default: false]
  description String
  createdBy User
  createdById String
  assignedTo User
  assignedToId String
}

Table Chore {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  done Boolean [not null, default: false]
  description String
  reward String
  createdBy User
  createdById String
  assignedTo User
  assignedToId String
}

Table Family {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  members User [not null]
}

Enum MemberType {
  PARENT
  CHILD
}

Enum Role {
  ADMIN
  USER
}

Ref: User.familyId > Family.id

Ref: Post.authorId > User.id

Ref: Task.createdById > User.id

Ref: Task.assignedToId > User.id

Ref: Chore.createdById > User.id

Ref: Chore.assignedToId > User.id